--- a/css/estiloTrabalhe.css
+++ b/css/estiloTrabalhe.css
@@ -1,11 +1,18 @@
-#centroTrabalhe {
-    width: 80%;
-    padding: 1.5rem; /* espaçamento */
+#centroTrabalhe{
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+form {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 5%;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, .212); /* sombra ao redor do box */
 }
 
 .form-header h1::after { /* cria linnha embaixo do titulo */
     content: '';
+    padding: 0 !important;
     display: block;
     width: 8rem;
     height: 0.3rem;
@@ -13,28 +20,28 @@
     margin: auto;
     position: absolute;
     border-radius: 10px;
+    
 } 
 
 h1 {
-    margin-bottom: 5%;
+    padding: 1.5rem;
 }
 
 .todosInputs { /* deixa um do lado do outro */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 1rem 0;
+    padding: 1% 0;
 }
 
 .inputBox { /* cria espaçamento */
     display: flex;
     flex-direction: column;
-    margin: 1.1rem;
+    margin: 1.5rem;
 }
 
 .inputBox input { /* personaliza os inputs */
-    margin: 0.6rem 0;
-    padding: 0.8rem 1.2rem;
+    padding: 0.8rem 1.3rem;
     border: none;
     border-radius: 10px;
     box-shadow: 1px 1px 6px #0000001c;
@@ -75,12 +82,17 @@ textarea:focus-visible{
     font-weight: normal;
 }
 
+.botaoEnviar {
+    padding: 5%;
+    display: flex;
+    width: 100%;
+}
+
 .botaoEnviar input {
     width: 100%;
-    margin-top: 2.5rem;
     border: none;
     background-color: #BC317D;
-    padding: 0.60rem;
+    padding: 1%;
     border-radius: 5px;
     cursor: pointer;
     color: white;
