--- a/css/estiloIndex.css
+++ b/css/estiloIndex.css
@@ -63,13 +63,24 @@ section.sobre {
     #sobreDetalhes {
         display: none; /* esconde o circulo, avatar e icones */
     }
+
     html, body {
         overflow-y: scroll; /* cria novamente a barra de rolagem vertical */
         overflow-x: scroll; /* cria novamente a barra de rolagem horizontal */
     }
+
     #textoSobre {
         width: 100%; /* volta para o meio da página */
         margin: 5%;
         left: 0; /* limpa a formatação anterior */
+    }
+    
+    #textoSobre h1 {
+        font-size: 1.5rem;
+    }
+    
+    #textoSobre p {
+        margin-top: 1rem;
+        font-size: 1rem;
     }
 }
