--- a/css/estiloPaginaProduto.css
+++ b/css/estiloPaginaProduto.css
@@ -20,7 +20,7 @@
 
 #destaque { /* deixa foto grande */
     padding: 1%;
-    width: 30%;
+    width: 100%;
 }
 
 #infoProduto { /* alinha no meio da vertical */
@@ -93,6 +93,23 @@ button:hover {
     color: #BC317D;
 }
 
+figure {
+    overflow: hidden;
+    width: 30%;
+    margin: 0.5%;
+    transition: all ease 0.5s;
+}
+
+figure img {
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: transform .5s ease;
+}
+
+figure img:hover {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
 @media (max-width: 1000px) { /* para formatação de mobile */
     .fotosProduto {
         padding: 2rem;
@@ -123,11 +140,15 @@ button:hover {
         padding: 2rem;
     }
     .conjuntoFotosPequenas {
-        width: 20%;
+        width: 25%;
     }
     
     #destaque { /* deixa foto grande */
-        padding: 1%;
-        width: 60%;
+        width: 100%;
+    }
+    
+    figure {
+        width: 75%;
+        margin: 0;
     }
 }
